export interface User {
  id: number;
  username: string;
  role: string;
}

export interface Branch {
  id: number;
  name: string;
}
