@startuml VRP_Database_ER_Diagram_ActualCode

title VRP System - Entity-Relationship Diagram

!define PK <color:red><b>PK</b></color>
!define FK <color:blue><b>FK</b></color>
!define UK <color:green><b>UK</b></color>
!define SPATIAL <color:purple><b>SPATIAL</b></color>

skinparam classAttributeIconSize 0
skinparam object {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

' ============================================
' BRANCH (Multi-tenant root)
' ============================================
object branches <<TABLE>> {
    PK id : BIGINT
    UK name : VARCHAR(100)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ============================================
' USER (Authentication & Authorization)
' ============================================
object users <<TABLE>> {
    PK id : BIGINT
    FK branch_id : BIGINT
    UK username : VARCHAR(50)
    password : VARCHAR(255)
    UK email : VARCHAR(100)
    full_name : VARCHAR(100)
    role : ENUM('PLANNER', 'CUSTOMER')
    enabled : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ============================================
' DEPOT (Warehouse locations)
' ============================================
object depots <<TABLE>> {
    PK id : BIGINT
    FK branch_id : BIGINT
    name : VARCHAR(255)
    address : VARCHAR(255)
    SPATIAL location : POINT SRID 4326
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ============================================
' FLEET (Vehicle groups)
' ============================================
object fleets <<TABLE>> {
    PK id : BIGINT
    FK branch_id : BIGINT
    fleet_name : VARCHAR(100)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ============================================
' VEHICLE TYPE
' ============================================
object vehicle_types <<TABLE>> {
    PK id : BIGINT
    FK branch_id : BIGINT
    type_name : VARCHAR(100)
    vehicle_features : JSON
    description : TEXT
    capacity : INT
    fixed_cost : DECIMAL(10,2)
    cost_per_km : DECIMAL(10,2)
    cost_per_hour : DECIMAL(10,2)
    max_distance : DECIMAL(10,2)
    max_duration : DECIMAL(10,2)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ============================================
' VEHICLE (Delivery vehicles)
' ============================================
object vehicles <<TABLE>> {
    PK id : BIGINT
    FK fleet_id : BIGINT
    FK vehicle_type_id : BIGINT
    FK start_depot_id : BIGINT
    FK end_depot_id : BIGINT
    UK vehicle_license_plate : VARCHAR(20)
    status : ENUM('AVAILABLE', 'IN_USE', 'MAINTENANCE', 'RETIRED')
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ============================================
' ORDER (Delivery orders)
' ============================================
object orders <<TABLE>> {
    PK id : BIGINT
    FK branch_id : BIGINT
    UK order_code : VARCHAR(50)
    customer_name : VARCHAR(100)
    customer_phone : VARCHAR(20)
    address : VARCHAR(255)
    SPATIAL location : POINT SRID 4326
    demand : DECIMAL(10,2)
    service_time : INT
    time_window_start : TIME
    time_window_end : TIME
    delivery_date : DATE
    status : ENUM('SCHEDULED', 'ON_ROUTE', 'SERVICING', 'COMPLETED', 'UNASSIGNED', 'REJECTED')
    priority : INT
    delivery_notes : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ============================================
' OPTIMIZATION JOB
' ============================================
object optimization_jobs <<TABLE>> {
    PK id : BIGINT
    FK branch_id : BIGINT
    FK created_by_user_id : BIGINT
    status : ENUM('PENDING', 'PROCESSING', 'COMPLETED', 'FAILED', 'CANCELLED')
    external_job_id : VARCHAR(255)
    input_data : JSON
    estimated_duration_minutes : INT
    error_message : TEXT
    created_at : TIMESTAMP
    started_at : TIMESTAMP
    completed_at : TIMESTAMP
    cancelled_at : TIMESTAMP
}

' ============================================
' SOLUTION
' ============================================
object solutions <<TABLE>> {
    PK id : BIGINT
    FK branch_id : BIGINT
    FK job_id : BIGINT
    status : ENUM('SUCCESS', 'PARTIAL_SUCCESS', 'INFEASIBLE', 'INITIAL')
    type : ENUM('ENGINE_GENERATED', 'FILE_IMPORTED')
    total_cost : DECIMAL(10,2)
    total_distance : DECIMAL(10,2)
    total_co2 : DECIMAL(10,2)
    total_time : DECIMAL(10,2)
    total_vehicles_used : INT
    served_orders : INT
    unserved_orders : INT
    error_message : TEXT
    created_at : TIMESTAMP
}

' ============================================
' UNASSIGNED ORDER
' ============================================
object unassigned_orders <<TABLE>> {
    PK id : BIGINT
    FK solution_id : BIGINT
    FK order_id : BIGINT
    reason : VARCHAR(255)
}

' ============================================
' ROUTE (Individual vehicle routes)
' ============================================
object routes <<TABLE>> {
    PK id : BIGINT
    FK solution_id : BIGINT
    FK vehicle_id : BIGINT
    route_order : INT
    distance : DECIMAL(10,2)
    co2_emission : DECIMAL(10,2)
    service_time : DECIMAL(10,2)
    order_count : INT
    load_utilization : DECIMAL(5,2)
    created_at : TIMESTAMP
}

' ============================================
' ROUTE STOP (Step-by-step route details)
' ============================================
object route_stops <<TABLE>> {
    PK id : BIGINT
    FK route_id : BIGINT
    FK order_id : BIGINT (nullable)
    sequence_number : INT
    type : ENUM('DEPOT', 'ORDER')
    location_id : VARCHAR(255)
    location_name : VARCHAR(255)
    SPATIAL location : POINT SRID 4326
    arrival_time : TIME
    departure_time : TIME
    service_time : DECIMAL(10,2)
    wait_time : DECIMAL(10,2)
    demand : DECIMAL(10,2)
    load_after : DECIMAL(10,2)
    distance_to_next : DECIMAL(10,2)
    time_to_next : DECIMAL(10,2)
}

' ============================================
' RELATIONSHIPS
' ============================================

' Branch relationships (1-to-many)
branches "1" -- "0..*" users : owns
branches "1" -- "0..*" depots : owns
branches "1" -- "0..*" fleets : owns
branches "1" -- "0..*" vehicle_types : owns
branches "1" -- "0..*" orders : owns
branches "1" -- "0..*" optimization_jobs : owns
branches "1" -- "0..*" solutions : owns

' User relationships
users "*" -- "1" branches : belongs_to
users "1" -- "0..*" optimization_jobs : creates

' Depot relationships
depots "*" -- "1" branches : belongs_to
depots "1" -- "0..*" vehicles : starts_from
depots "1" -- "0..*" vehicles : ends_at

' Fleet relationships
fleets "*" -- "1" branches : belongs_to
fleets "1" -- "0..*" vehicles : contains

' Vehicle Type relationships
vehicle_types "*" -- "1" branches : belongs_to
vehicle_types "1" -- "0..*" vehicles : defines

' Vehicle relationships
vehicles "*" -- "1" fleets : belongs_to
vehicles "*" -- "1" vehicle_types : has_type
vehicles "*" -- "1" depots : starts_at
vehicles "*" -- "1" depots : ends_at
vehicles "1" -- "0..*" routes : assigned_to

' Order relationships
orders "*" -- "1" branches : belongs_to
orders "0..1" -- "0..*" route_stops : visited_in
orders "0..1" -- "0..*" unassigned_orders : referenced_in

' Job relationships
optimization_jobs "*" -- "1" branches : belongs_to
optimization_jobs "*" -- "1" users : created_by
optimization_jobs "1" -- "0..1" solutions : produces

' Solution relationships
solutions "*" -- "1" optimization_jobs : generated_from
solutions "*" -- "1" branches : belongs_to
solutions "1" -- "0..*" routes : contains
solutions "1" -- "0..*" unassigned_orders : has

' Unassigned Order relationships
unassigned_orders "*" -- "1" solutions : part_of
unassigned_orders "*" -- "1" orders : references

' Route relationships
routes "*" -- "1" solutions : part_of
routes "*" -- "1" vehicles : uses
routes "1" -- "1..*" route_stops : contains

' Route Stop relationships
route_stops "*" -- "1" routes : part_of
route_stops "*" -- "0..1" orders : delivers

' ============================================
' INDEXES
' ============================================
note top of users
  **Indexes:**
  - idx_user_branch (branch_id)
end note

note top of depots
  **Indexes:**
  - idx_depot_branch (branch_id)
  - idx_depot_location (location)
end note

note top of vehicles
  **Indexes:**
  - idx_vehicle_fleet (fleet_id)
  - idx_vehicle_status (status)
  - idx_vehicle_license (vehicle_license_plate) UK
end note

note top of orders
  **Indexes:**
  - idx_order_branch (branch_id)
  - idx_order_status (status)
  - idx_order_code (order_code, branch_id) UK
  - idx_order_location (location)
end note

note top of optimization_jobs
  **Indexes:**
  - idx_job_branch (branch_id)
  - idx_job_status (status)
  - idx_job_created (created_at)
end note

note top of solutions
  **Indexes:**
  - idx_solution_branch (branch_id)
  - idx_solution_status (status)
  - idx_solution_created (created_at)
end note

note top of routes
  **Indexes:**
  - idx_route_solution (solution_id)
  - idx_route_vehicle (vehicle_id)
end note

note top of route_stops
  **Indexes:**
  - idx_stop_route (route_id)
  - idx_stop_order (order_id)
  - idx_stop_sequence (route_id, sequence_number)
end note

' ============================================
' LEGEND
' ============================================
legend right
    **NOTATION:**
    PK = Primary Key
    FK = Foreign Key
    UK = Unique Key
    SPATIAL = Spatial data type (POINT SRID 4326)

    **CARDINALITY:**
    1 -- 0..* : One to Many
    * -- 1 : Many to One
    1 -- 1 : One to One
    0..1 -- 0..* : Optional One to Many
    1 -- 0..1 : One to Zero or One

    **KEY FEATURES:**
    • Multi-tenant via Branch
    • Spatial data with PostGIS (SRID 4326)
    • Job tracking with status transitions
    • Solution with routes and unassigned orders
    • Vehicle types with cost parameters
    • Time windows for orders
    • Route stops with detailed timing info

    **ENUM VALUES:**
    • UserRole: PLANNER, CUSTOMER
    • VehicleStatus: AVAILABLE, IN_USE, MAINTENANCE, RETIRED
    • OrderStatus: SCHEDULED, ON_ROUTE, SERVICING, COMPLETED, UNASSIGNED, REJECTED
    • OptimizationJobStatus: PENDING, PROCESSING, COMPLETED, FAILED, CANCELLED
    • SolutionStatus: SUCCESS, PARTIAL_SUCCESS, INFEASIBLE, INITIAL
    • SolutionType: ENGINE_GENERATED, FILE_IMPORTED
    • LocationType: DEPOT, ORDER

    **CHANGES FROM ORIGINAL:**
    • Added vehicle_types table
    • Added unassigned_orders table
    • Changed route_segments → route_stops
    • Updated ENUM values based on actual code
    • Added more detailed indexes
    • Fixed relationship cardinalities
endlegend

@enduml

@startuml

skinparam linetype ortho
skinparam class {
    BackgroundColor White
    ArrowColor #263238
    BorderColor #263238
}

entity "Branch" as branch {
    * id : BIGINT <<PK>>
    --
    name : VARCHAR
    config : JSON
}

entity "User" as user {
    * id : BIGINT <<PK>>
    --
    branch_id : BIGINT <<FK>>
    username : VARCHAR
    role : ENUM(PLANNER, CUSTOMER)
}

entity "VehicleType" as vt {
    * id : BIGINT <<PK>>
    --
    name : VARCHAR
    capacity : DOUBLE
    cost_per_km : DOUBLE
    emission_factor : DOUBLE
}

entity "Vehicle" as vehicle {
    * id : BIGINT <<PK>>
    --
    branch_id : BIGINT <<FK>>
    type_id : BIGINT <<FK>>
    name : VARCHAR
}

entity "Order" as order {
    * id : BIGINT <<PK>>
    --
    branch_id : BIGINT <<FK>>
    location : POINT
    demand : DOUBLE
    time_window_start : DATETIME
    time_window_end : DATETIME
}

entity "OptimizationJob" as job {
    * id : BIGINT <<PK>>
    --
    branch_id : BIGINT <<FK>>
    user_id : BIGINT <<FK>>
    status : ENUM(PROCESSING, COMPLETED, FAILED)
}

entity "Solution" as solution {
    * id : BIGINT <<PK>>
    --
    job_id : BIGINT <<FK>>
    total_cost : DOUBLE
    total_co2 : DOUBLE
}

entity "Route" as route {
    * id : BIGINT <<PK>>
    --
    solution_id : BIGINT <<FK>>
    vehicle_id : BIGINT <<FK>>
    distance : DOUBLE
}

entity "RouteStop" as stop {
    * id : BIGINT <<PK>>
    --
    route_id : BIGINT <<FK>>
    order_id : BIGINT <<FK>>
    sequence_number : INT
    arrival_time : DATETIME
}

branch ||--o{ user
branch ||--o{ vehicle
branch ||--o{ order
branch ||--o{ job
vt ||--o{ vehicle
job ||--o| solution
solution ||--o{ route
route ||--o{ stop
order ||--o{ stop
@enduml
